Used a simpler way for re-using the base model for generating sample GenAI response. Increased max_new_tokens from 500 to 5000 to make sure that the full GenAI response is obtained and printed. Put lines to check free memory before/after each major step.

--- a/Colab_Notebook_Fine_Tuning_Llama_Model.ipynb
+++ b/Colab_Notebook_Fine_Tuning_Llama_Model.ipynb
@@ -164,7 +164,8 @@
     "    lr_scheduler_type=\"constant\",\n",
     "    report_to=\"none\"\n",
     ")\n",
-    "\n"
+    "\n",
+    "print(\"Free memory at the moment:\", torch.cuda.memory_reserved(0) - torch.cuda.memory_allocated(0))"
    ],
    "metadata": {
     "id": "LWIpn6_YbRbx"
@@ -223,7 +224,9 @@
     "    print(f\"\\nSuccessfully created dataset with {len(corpus_text)} characters.\")\n",
     "else:\n",
     "    print(\"\\nData loading failure!\")\n",
-    "\n"
+    "    #exit()  #only works if you are executing locally, not on Google Colab.\n",
+    "\n",
+    "print(\"Free memory at the moment:\", torch.cuda.memory_reserved(0) - torch.cuda.memory_allocated(0))"
    ],
    "metadata": {
     "id": "pRqW1ilHbRfS"
@@ -239,53 +242,73 @@
     "###########################################################################\n",
     "\n",
     "# --- Load the model with 4-bit quantization (this significantly reduces the memory footprint) ---\n",
-    "bnb_config = BitsAndBytesConfig(\n",
-    "    load_in_4bit=True,\n",
-    "    bnb_4bit_quant_type=\"nf4\",\n",
-    "    bnb_4bit_compute_dtype=torch.float16,\n",
-    "    bnb_4bit_use_double_quant=False,\n",
-    ")\n",
+    "if (dataset):  # prevent continuation if there were no PDFs or no text was extracted\n",
+    "    bnb_config = BitsAndBytesConfig(\n",
+    "        load_in_4bit=True,\n",
+    "        bnb_4bit_quant_type=\"nf4\",\n",
+    "        bnb_4bit_compute_dtype=torch.float16,\n",
+    "        bnb_4bit_use_double_quant=False,\n",
+    "    )\n",
     "\n",
-    "print(\"\\nLoading base model...\")\n",
-    "base_model = AutoModelForCausalLM.from_pretrained(\n",
-    "    BASE_MODEL_NAME,\n",
-    "    quantization_config=bnb_config,\n",
-    "    device_map=\"auto\" # Automatically maps the model to available devices (GPU/CPU).\n",
-    ")\n",
-    "base_model.config.use_cache = False\n",
-    "base_model.config.pretraining_tp = 1\n",
+    "    print(\"\\nLoading base model...\")\n",
+    "    base_model = AutoModelForCausalLM.from_pretrained(\n",
+    "        BASE_MODEL_NAME,\n",
+    "        quantization_config=bnb_config,\n",
+    "        device_map=\"auto\" # Automatically maps the model to available devices (GPU/CPU).\n",
+    "    )\n",
+    "    base_model.config.use_cache = False\n",
+    "    base_model.config.pretraining_tp = 1\n",
     "\n",
-    "print (\"Model and its layers:\")\n",
-    "print(base_model)\n",
+    "    print (\"Model and its layers:\")\n",
+    "    print(base_model)\n",
     "\n",
-    "print(\"Currently used device by base_model: \", base_model.device)\n",
-    "\n",
-    "# --- Load the tokenizer ---\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    BASE_MODEL_NAME,\n",
-    "    trust_remote_code=True)\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n",
-    "tokenizer.padding_side = \"right\"\n",
-    "\n",
-    "print(\"Base model and tokenizer loaded successfully.\")\n",
-    "\n",
-    "# --- Tokenize the dataset ---\n",
-    "def tokenize_function(examples):\n",
-    "    # We just return the tokenized text. The data collator will handle batching and masking.\n",
-    "    return tokenizer(examples[\"text\"], truncation=True, max_length=512)\n",
-    "\n",
-    "tokenized_dataset = dataset.map(tokenize_function, batched=True, remove_columns=[\"text\"])\n",
-    "\n",
-    "# --- Prepare model for PEFT ---\n",
-    "peft_model = get_peft_model(base_model, lora_config)\n",
-    "print(\"\\nModel prepared for PEFT.\")\n",
-    "\n"
+    "    print(\"Currently used device by base_model: \", base_model.device)\n"
    ],
    "metadata": {
     "id": "quOe0-A3bRik"
    },
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "if (dataset):\n",
+    "    # --- Load the tokenizer ---\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(\n",
+    "        BASE_MODEL_NAME,\n",
+    "        trust_remote_code=True)\n",
+    "    tokenizer.pad_token = tokenizer.eos_token\n",
+    "    tokenizer.padding_side = \"right\"\n",
+    "\n",
+    "    print(\"Base model and tokenizer loaded successfully.\")\n",
+    "\n",
+    "    # --- Tokenize the dataset ---\n",
+    "    def tokenize_function(examples):\n",
+    "        # We just return the tokenized text. The data collator will handle batching and masking.\n",
+    "        return tokenizer(examples[\"text\"], truncation=True, max_length=512)\n",
+    "\n",
+    "    tokenized_dataset = dataset.map(tokenize_function, batched=True, remove_columns=[\"text\"])\n",
+    "\n",
+    "    print(\"Free memory at the moment:\", torch.cuda.memory_reserved(0) - torch.cuda.memory_allocated(0))"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "if (dataset):\n",
+    "    # --- Prepare model for PEFT ---\n",
+    "    peft_model = get_peft_model(base_model, lora_config)\n",
+    "    print(\"\\nModel prepared for PEFT.\")\n",
+    "\n",
+    "    print(\"Free memory at the moment:\", torch.cuda.memory_reserved(0) - torch.cuda.memory_allocated(0))"
+   ]
   },
   {
    "cell_type": "code",
@@ -308,8 +331,12 @@
     "\n",
     "\n",
     "print(\"Starting training...\")\n",
+    "\n",
+    "print(\"Free memory at the beginning of training:\", torch.cuda.memory_reserved(0) - torch.cuda.memory_allocated(0))\n",
     "trainer.train()\n",
     "print(\"Training complete.\")\n",
+    "\n",
+    "print(\"Free memory after training:\", torch.cuda.memory_reserved(0) - torch.cuda.memory_allocated(0))\n",
     "\n",
     "# --- Save the fine-tuned model ---\n",
     "# This saves the LoRA adapter, not the full model.\n",
@@ -358,7 +385,7 @@
     "    # Generate the response\n",
     "    outputs = model.generate(\n",
     "        input_ids,\n",
-    "        max_new_tokens=500,  # Limit the length of the generated response.\n",
+    "        max_new_tokens=5000,  # Limit the length of the generated response.\n",
     "        do_sample=True,\n",
     "        temperature=0.6,\n",
     "        top_p=0.9,\n",
@@ -379,42 +406,47 @@
    "source": [
     "# Compare the response of the base model to the response of the fine-tuned model\n",
     "\n",
-    "# print(\"\\n--- Generating response from ORIGINAL BASE MODEL ---\")\n",
-    "# # For the base model, we don't need to load any adapters.\n",
-    "# # We can use the 'base_model' object we already have, but we'll set it to evaluation mode.\n",
-    "# base_model.eval()\n",
-    "# base_response = generate_response(base_model, tokenizer, prompt)\n",
-    "# print(f\"Prompt: {prompt}\")\n",
-    "# print(f\"Response:\\n{base_response}\\n\")\n",
-    "\n",
-    "\n",
-    "# --- Determine the device ---\n",
-    "# This is mainly for logging; device_map=\"auto\" handles the actual placement.\n",
-    "device_string = \"mps\" if torch.backends.mps.is_available() else \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "print(f\"\\nUsing device: {device_string.upper()}\")\n",
-    "\n",
+    "##### The main/simple way of doing it\n",
     "print(\"\\n--- Generating response from ORIGINAL BASE MODEL ---\")\n",
-    "# Clear memory first\n",
-    "print(\"Trying to clear some memory!\")\n",
-    "del peft_model\n",
-    "del base_model\n",
-    "del trainer\n",
-    "if \"cuda\" in device_string:\n",
-    "    torch.cuda.empty_cache()\n",
-    "elif \"mps\" in device_string:\n",
-    "    torch.mps.empty_cache()\n",
-    "\n",
-    "original_model = AutoModelForCausalLM.from_pretrained(\n",
-    "    BASE_MODEL_NAME,\n",
-    "    quantization_config=bnb_config,\n",
-    "    device_map=\"auto\"\n",
-    ")\n",
-    "\n",
-    "original_model.config.pad_token_id = tokenizer.eos_token_id\n",
-    "\n",
-    "base_response = generate_response(original_model, tokenizer, prompt)\n",
+    "# For the base model, we don't need to load any adapters.\n",
+    "# We can use the 'base_model' object we already have, but we'll set it to evaluation mode.\n",
+    "base_model.eval()\n",
+    "base_response = generate_response(base_model, tokenizer, prompt)\n",
     "print(f\"Prompt: {prompt}\")\n",
     "print(f\"Response:\\n{base_response}\\n\")\n",
+    "\n",
+    "\n",
+    "##### A potentially alternative way of doing it:\n",
+    "# # --- Determine the device ---\n",
+    "# # This is mainly for logging; device_map=\"auto\" handles the actual placement.\n",
+    "# device_string = \"mps\" if torch.backends.mps.is_available() else \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "# print(f\"\\nUsing device: {device_string.upper()}\")\n",
+    "#\n",
+    "# print(\"\\n--- Generating response from ORIGINAL BASE MODEL ---\")\n",
+    "# # Clear memory first\n",
+    "# print(\"Free memory before clearing memory:\", torch.cuda.memory_reserved(0) - torch.cuda.memory_allocated(0))\n",
+    "# print(\"Trying to clear some memory!\")\n",
+    "# del peft_model\n",
+    "# del base_model\n",
+    "# del trainer\n",
+    "# if \"cuda\" in device_string:\n",
+    "#     torch.cuda.empty_cache()\n",
+    "# elif \"mps\" in device_string:\n",
+    "#     torch.mps.empty_cache()\n",
+    "\n",
+    "# print(\"Free memory after clearing memory:\", torch.cuda.memory_reserved(0) - torch.cuda.memory_allocated(0))\n",
+    "#\n",
+    "# original_model = AutoModelForCausalLM.from_pretrained(\n",
+    "#     BASE_MODEL_NAME,\n",
+    "#     quantization_config=bnb_config,\n",
+    "#     device_map=\"auto\"\n",
+    "# )\n",
+    "#\n",
+    "# original_model.config.pad_token_id = tokenizer.eos_token_id\n",
+    "#\n",
+    "# base_response = generate_response(original_model, tokenizer, prompt)\n",
+    "# print(f\"Prompt: {prompt}\")\n",
+    "# print(f\"Response:\\n{base_response}\\n\")\n",
     "\n"
    ],
    "metadata": {
