Added some custom code to deal with some peculiar things related to google/gemma-2-2b-it model in particular.

--- a/Colab_Notebook_Fine_Tuning_Llama_Model.ipynb
+++ b/Colab_Notebook_Fine_Tuning_Llama_Model.ipynb
@@ -367,11 +367,24 @@
     "    \"\"\"\n",
     "    Generates a response from a given model and tokenizer.\n",
     "    \"\"\"\n",
+    "\n",
     "    # Create the messages payload for the chat model\n",
-    "    messages = [\n",
-    "        {\"role\": \"system\", \"content\": \"You are an expert economist. Provide a detailed and insightful analysis.\"},\n",
+    "\n",
+    "    # google/gemma-2-2b-it model does not support role \"system\"; it calls it \"assistant\"\n",
+    "    system_role = \"assistant\" if BASE_MODEL_NAME==\"google/gemma-2-2b-it\" else \"system\"\n",
+    "\n",
+    "    messages = []\n",
+    "\n",
+    "    # google/gemma-2-2b-it model is a bit classic and it insists that the user role starts first\n",
+    "    if BASE_MODEL_NAME==\"google/gemma-2-2b-it\":\n",
+    "        messages.append({\"role\": \"user\", \"content\": \"Please assist me!\"})\n",
+    "\n",
+    "    messages.append([\n",
+    "        {\"role\": system_role, \"content\": \"You are an expert economist. Provide a detailed and insightful analysis.\"},\n",
     "        {\"role\": \"user\", \"content\": prompt_text},\n",
-    "    ]\n",
+    "    ])\n",
+    "\n",
+    "    #print(\"#debugging at generate_response(): messages:\", messages)\n",
     "\n",
     "    print(\"Currently used device by the model: \", model.device)\n",
     "\n",
@@ -515,7 +528,7 @@
     "# drive.mount('/content/drive')  # When you get to the authentication, I have to select all things to allow all!\n",
     "\n",
     "# %cd /content/\n",
-    "# !zip -r my_model.zip meta-llama-Meta-Llama-3.1-8B-Instruct-tuned-for-economics/\n",
+    "# !zip -r my_model.zip <model-folder-name-here>/\n",
     "\n",
     "# from google.colab import files\n",
     "# files.download('my_model.zip')\n"
