just added the names of two LLMs in the list of LLMs to try out later.

--- a/Colab_Notebook_Fine_Tuning_Llama_Model.ipynb
+++ b/Colab_Notebook_Fine_Tuning_Llama_Model.ipynb
@@ -106,6 +106,8 @@
     "#   - mistralai/Mistral-7B-Instruct-v0.3: 7.25B params, Tensor type: BF16\n",
     "#   - microsoft/Phi-3-mini-4k-instruct: Small Language model with 3.82 billion parameters, Tensor Type: BF16\n",
     "#   - google/gemma-2-2b-it: Compact/LightWeight model with 2.61 billion parameter, known for strong performance in multilingual applications. Tensor Type: BF16\n",
+    "#   - Qwen/Qwen2.5-7B-Instruct: 7.62B params, Tensor type: BF16\n",
+    "#   - openai/gpt-oss-20b: 21.5B params (but they say it works on 16GB RAM machines, Tensor type: BF16·U8\n",
     "#   - malhajar/Mistral-7B-v0.1-arabic: A fine-tuned version of Mistral 7B specifically for Arabic.\n",
     "#   - QCRI/Fanar-1-9B-Instruct: A model developed by Qatar's Computing Research Institute, based on a different architecture but highly specialized for Arabic.\n",
     "#   - ALLaM-AI/ALLaM-7B-Instruct-preview: A Saudi-led initiative with a focus on Arabic.\n",
